// Implements the network layer services for the library

syntax = "proto3";

package communication;
option go_package = "src/proto/communication";

// The service definitions.
service Send {

  rpc SendMsg (RawMessage) returns (Empty) {}
  rpc SendRequest (Request) returns (RawMessage) {}
  rpc Join (RawMessage) returns (RawMessage) {}

  rpc RBCSendByteMsg (RawMessage) returns (Empty) {}
  rpc ABASendByteMsg (RawMessage) returns (Empty) {}
  rpc PRFSendByteMsg (RawMessage) returns (Empty) {}

  rpc ECRBCSendByteMsg (RawMessage) returns (Empty) {}
  rpc CBCSendByteMsg (RawMessage) returns (Empty) {}
  rpc EVCBCSendByteMsg (RawMessage) returns (Empty) {}
  rpc MVBASendByteMsg (RawMessage) returns (Empty) {}
  rpc RetrieveSendByteMsg (RawMessage) returns (Empty) {}
  rpc SimpleSendByteMsg (RawMessage) returns (Empty) {}
  rpc EchoSendByteMsg (RawMessage) returns (Empty) {}
  rpc GCSendByteMsg (RawMessage) returns (Empty) {}

  rpc HACSSSendByteMsg (RawMessage) returns (Empty) {}

  rpc HotStuffSendByteMsg (RawMessage) returns (Empty) {}
}

enum MessageType {
    BROADCAST = 0;
    JOIN = 1; 
    WRITE = 2;
    WRITE_BATCH = 3;
    RECONSTRUCT = 4;
    TEST_HACSS = 5;
    QC = 6;
    QCREP = 7;
    TIMEOUT = 8;
    TQC = 9;
    VIEWCHANGE = 10;
    NEWVIEW = 11;
    REC1 = 12;
    ECHO1 = 13;
    REC2 = 14;
    ECHO2 = 15;
    QCP2 = 16;
    QCP3 = 17;
    QCP4 = 18;
    QC2 = 19;
    QCBC = 20;
    QCBCREP = 21;
    QCREP2 = 22;
    QCBCFINAL = 23;
};

message Message {
  int64 sender = 1;
  MessageType type = 2;
  string input = 3;
}

message RawMessage {
  bytes msg = 1;
  bool result = 2;
}

// Request with a request type and payload in bytes
message Request {
  MessageType type = 1;
  bytes request = 2;
  string version = 3;
}

// Empty response
message Empty{
}
